--- a/core/templates/core/cashbeginningbalance_list.html
+++ b/core/templates/core/cashbeginningbalance_list.html
@@ -98,7 +98,7 @@
                                 <span class="row-index">1</span>
                             </td>
                             <td class="px-2 py-1 whitespace-nowrap text-xs text-gray-900 border-r border-gray-200">
-                                <span class="account-format" title="{{ balance.AccountID.AccountCode }} - {{ balance.AccountID.AccountName }}">{{ balance.AccountID.AccountCode }}</span>
+                                <span class="account-format" title="{{ balance.AccountID.AccountCode }} - {{ balance.AccountID.AccountName }}">{{ balance.AccountID.AccountCode }} - {{ balance.AccountID.AccountName }}</span>
                             </td>
                             <td class="px-2 py-1 whitespace-nowrap text-xs text-gray-900 border-r border-gray-200">
                                 {{ balance.ClientID.ClientName|default:"-" }}
